--- a/index.html
+++ b/index.html
@@ -1178,22 +1178,22 @@
         <div class="row">
           <div class="col-md-3">
             <div class="polaroid">
-              <a href="australia.html" target="_blank"><img src="img/Gallery/Australia/01.jpeg" alt="Australia" width="170" height="130"></a><div class="container"><p>AUSTRALIA</p></div>
+              <a href="australia.html" target="_blank"><img src="img/Gallery/Australia/01.jpeg" alt="Australia" class="img-fluid"></a><div class="container"><p>AUSTRALIA</p></div>
             </div>
           </div>
           <div class="col-md-3">
             <div class="polaroid">
-              <a href="austria.html" target="_blank"><img src="img/Gallery/Austria/01.jpeg" alt="Austria" width="169" height="130"></a><div class="container"><p>AUSTRIA</p></div>
+              <a href="austria.html" target="_blank"><img src="img/Gallery/Austria/01.jpeg" alt="Austria" class="img-fluid"></a><div class="container"><p>AUSTRIA</p></div>
             </div>
           </div>
           <div class="col-md-3">
             <div class="polaroid">
-              <a href="belgium.html" target="_blank"><img src="img/Gallery/Belgium/01.jpeg" alt="Belgium" width="169" height="130"></a><div class="container"><p>BELGIUM</p></div>
+              <a href="belgium.html" target="_blank"><img src="img/Gallery/Belgium/01.jpeg" alt="Belgium" class="img-fluid"></a><div class="container"><p>BELGIUM</p></div>
             </div>
           </div>
           <div class="col-md-3">
             <div class="polaroid">
-              <a href="cambodia.html" target="_blank"><img src="img/Gallery/Cambodia/01.jpeg" alt="Cambodia" width="170" height="130"></a><div class="container"><p>CAMBODIA</p></div>
+              <a href="cambodia.html" target="_blank"><img src="img/Gallery/Cambodia/01.jpeg" alt="Cambodia" class="img-fluid"></a><div class="container"><p>CAMBODIA</p></div>
             </div>
           </div>
         </div>
@@ -1202,22 +1202,22 @@
         <div class="row">
           <div class="col-md-3">
             <div class="polaroid">
-              <a href="china.html" target="_blank"><img src="img/Gallery/China/01.jpeg" alt="China" width="170" height="130"></a><div class="container"><p>CHINA</p></div>
+              <a href="china.html" target="_blank"><img src="img/Gallery/China/01.jpeg" alt="China" class="img-fluid"></a><div class="container"><p>CHINA</p></div>
             </div>
           </div>
           <div class="col-md-3">
             <div class="polaroid">
-              <a href="croatia.html" target="_blank"><img src="img/Gallery/Croatia/01.jpeg" alt="Croatia" width="170" height="130"></a><div class="container"><p>CROATIA</p></div>
+              <a href="croatia.html" target="_blank"><img src="img/Gallery/Croatia/01.jpeg" alt="Croatia" class="img-fluid"></a><div class="container"><p>CROATIA</p></div>
             </div>
           </div>
           <div class="col-md-3">
             <div class="polaroid">
-              <a href="czech.html" target="_blank"><img src="img/Gallery/Czech/01.jpeg" alt="Czech" width="170" height="130"></a><div class="container"><p>CZECH</p></div>
+              <a href="czech.html" target="_blank"><img src="img/Gallery/Czech/01.jpeg" alt="Czech" class="img-fluid"></a><div class="container"><p>CZECH</p></div>
             </div>
           </div>
           <div class="col-md-3">
             <div class="polaroid">
-              <a href="england.html" target="_blank"><img src="img/Gallery/England/01.jpeg" alt="England" width="170" height="130"></a><div class="container"><p>ENGLAND</p></div>
+              <a href="england.html" target="_blank"><img src="img/Gallery/England/01.jpeg" alt="England" class="img-fluid"></a><div class="container"><p>ENGLAND</p></div>
             </div>
           </div>
 		    </div>
@@ -1226,22 +1226,22 @@
   		  <div class="row">
           <div class="col-md-3">
             <div class="polaroid">
-              <a href="estonia.html" target="_blank"><img src="img/Gallery/Estonia/01.jpeg" alt="Estonia" width="170" height="130"></a><div class="container"><p>ESTONIA</p></div>
+              <a href="estonia.html" target="_blank"><img src="img/Gallery/Estonia/01.jpeg" alt="Estonia" class="img-fluid"></a><div class="container"><p>ESTONIA</p></div>
             </div>
           </div>
           <div class="col-md-3">
             <div class="polaroid">
-              <a href="finland.html" target="_blank"><img src="img/Gallery/Finland/01.jpeg" alt="Finland" width="170" height="130"></a><div class="container"><p>FINLAND</p></div>
+              <a href="finland.html" target="_blank"><img src="img/Gallery/Finland/01.jpeg" alt="Finland" class="img-fluid"></a><div class="container"><p>FINLAND</p></div>
             </div>
           </div>
           <div class="col-md-3">
             <div class="polaroid">
-              <a href="france.html" target="_blank"><img src="img/Gallery/France/01.jpeg" alt="France" width="169" height="130"></a><div class="container"><p>FRANCE</p></div>
+              <a href="france.html" target="_blank"><img src="img/Gallery/France/01.jpeg" alt="France" class="img-fluid"></a><div class="container"><p>FRANCE</p></div>
             </div>
           </div>
           <div class="col-md-3">
             <div class="polaroid">
-              <a href="germany.html" target="_blank"><img src="img/Gallery/Germany/01.jpeg" alt="Germany" width="169.2" height="130"></a><div class="container"><p>GERMANY</p></div>
+              <a href="germany.html" target="_blank"><img src="img/Gallery/Germany/01.jpeg" alt="Germany" class="img-fluid"></a><div class="container"><p>GERMANY</p></div>
             </div>
           </div>
   			</div>
@@ -1250,22 +1250,22 @@
 	      <div class="row">
           <div class="col-md-3">
             <div class="polaroid">
-              <a href="hungary.html" target="_blank"><img src="img/Gallery/Hungary/01.jpeg" alt="Hungary" width="170" height="130"></a><div class="container"><p>HUNGARY</p></div>
+              <a href="hungary.html" target="_blank"><img src="img/Gallery/Hungary/01.jpeg" alt="Hungary" class="img-fluid"></a><div class="container"><p>HUNGARY</p></div>
             </div>
           </div>
           <div class="col-md-3">
             <div class="polaroid">
-              <a href="italy.html" target="_blank"><img src="img/Gallery/Italy/01.jpeg" alt="Italy" width="170" height="130"></a><div class="container"><p>ITALY</p></div>
+              <a href="italy.html" target="_blank"><img src="img/Gallery/Italy/01.jpeg" alt="Italy" class="img-fluid"></a><div class="container"><p>ITALY</p></div>
             </div>
           </div>
 	        <div class="col-md-3">
             <div class="polaroid">
-              <a href="japan.html" target="_blank"><img src="img/Gallery/Japan/01.jpeg" alt="Japan" width="170" height="130"></a><div class="container"><p>JAPAN</p></div>
+              <a href="japan.html" target="_blank"><img src="img/Gallery/Japan/01.jpeg" alt="Japan" class="img-fluid"></a><div class="container"><p>JAPAN</p></div>
             </div>
           </div>
           <div class="col-md-3">
             <div class="polaroid">
-              <a href="kingdom of saudi arabia.html" target="_blank"><img src="img/Gallery/Kingdom of Saudi Arabia/01.jpeg" alt="Kingdom of Saudi Arabia" width="170" height="130"></a><div class="container"><p>Saudi Arabia</p></div>
+              <a href="kingdom of saudi arabia.html" target="_blank"><img src="img/Gallery/Kingdom of Saudi Arabia/01.jpeg" alt="Kingdom of Saudi Arabia" class="img-fluid""></a><div class="container"><p>Saudi Arabia</p></div>
             </div>
           </div>
 	      </div>
@@ -1274,22 +1274,22 @@
   		  <div class="row">
           <div class="col-md-3">
            <div class="polaroid">
-             <a href="latvia.html" target="_blank"><img src="img/Gallery/Latvia/01.jpeg" alt="Latvia" width="170" height="130"></a><div class="container"><p>LATVIA</p></div>
+             <a href="latvia.html" target="_blank"><img src="img/Gallery/Latvia/01.jpeg" alt="Latvia" class="img-fluid"></a><div class="container"><p>LATVIA</p></div>
            </div>
           </div>
           <div class="col-md-3">
             <div class="polaroid">
-              <a href="lithuania.html" target="_blank"><img src="img/Gallery/Lithuania/01.jpeg" alt="Lithuania" width="169" height="130"></a><div class="container"><p>LITHUANIA</p></div>
+              <a href="lithuania.html" target="_blank"><img src="img/Gallery/Lithuania/01.jpeg" alt="Lithuania" class="img-fluid"></a><div class="container"><p>LITHUANIA</p></div>
             </div>
           </div>
           <div class="col-md-3">
             <div class="polaroid">
-              <a href="malaysia.html" target="_blank"><img src="img/Gallery/Malaysia/01.jpeg" alt="Malaysia" width="169" height="130"></a><div class="container"><p>MALAYSIA</p></div>
+              <a href="malaysia.html" target="_blank"><img src="img/Gallery/Malaysia/01.jpeg" alt="Malaysia" class="img-fluid"></a><div class="container"><p>MALAYSIA</p></div>
             </div>
           </div>
           <div class="col-md-3">
             <div class="polaroid">
-              <a href="malta.html" target="_blank"><img src="img/Gallery/Malta/01.jpeg" alt="Malta" width="169" height="130"></a><div class="container"><p>MALTA</p></div>
+              <a href="malta.html" target="_blank"><img src="img/Gallery/Malta/01.jpeg" alt="Malta" class="img-fluid"></a><div class="container"><p>MALTA</p></div>
             </div>
           </div>
         </div>
@@ -1298,22 +1298,22 @@
     		<div class="row">
           <div class="col-md-3">
             <div class="polaroid">
-              <a href="netherlands.html" target="_blank"><img src="img/Gallery/Netherlands/01.jpeg" alt="Netherlands" width="170" height="130"></a><div class="container"><p>NETHERLANDS</p></div>
+              <a href="netherlands.html" target="_blank"><img src="img/Gallery/Netherlands/01.jpeg" alt="Netherlands" class="img-fluid"></a><div class="container"><p>NETHERLANDS</p></div>
             </div>
           </div>
           <div class="col-md-3">
             <div class="polaroid">
-              <a href="pakistan.html" target="_blank"><img src="img/Gallery/Pakistan/01.jpeg" alt="Pakistan" width="170" height="130"></a><div class="container"><p>PAKISTAN</p></div>
+              <a href="pakistan.html" target="_blank"><img src="img/Gallery/Pakistan/01.jpeg" alt="Pakistan" class="img-fluid"></a><div class="container"><p>PAKISTAN</p></div>
             </div>
           </div>
           <div class="col-md-3">
             <div class="polaroid">
-              <a href="poland.html" target="_blank"><img src="img/Gallery/Poland/01.jpeg" alt="Poland" width="169" height="130"></a><div class="container"><p>POLAND</p></div>
+              <a href="poland.html" target="_blank"><img src="img/Gallery/Poland/01.jpeg" alt="Poland" class="img-fluid"></a><div class="container"><p>POLAND</p></div>
             </div>
           </div>
           <div class="col-md-3">
             <div class="polaroid">
-              <a href="portugal.html" target="_blank"><img src="img/Gallery/Portugal/01.jpeg" alt="Portugal" width="169" height="130"></a><div class="container"><p>PORTUGAL</p></div>
+              <a href="portugal.html" target="_blank"><img src="img/Gallery/Portugal/01.jpeg" alt="Portugal" class="img-fluid"></a><div class="container"><p>PORTUGAL</p></div>
             </div>
           </div>
         </div>
@@ -1322,22 +1322,22 @@
   		  <div class="row">
           <div class="col-md-3">
             <div class="polaroid">
-              <a href="scotland.html" target="_blank"><img src="img/Gallery/Scotland/01.jpeg" alt="Scotland" width="170" height="130"></a><div class="container"><p>SCOTLAND</p></div>
+              <a href="scotland.html" target="_blank"><img src="img/Gallery/Scotland/01.jpeg" alt="Scotland" class="img-fluid"></a><div class="container"><p>SCOTLAND</p></div>
             </div>
           </div>
           <div class="col-md-3">
             <div class="polaroid">
-              <a href="slovakia.html" target="_blank"><img src="img/Gallery/Slovakia/01.jpeg" alt="Slovakia" width="170" height="130"></a><div class="container"><p>SLOVAKIA</p></div>
+              <a href="slovakia.html" target="_blank"><img src="img/Gallery/Slovakia/01.jpeg" alt="Slovakia" class="img-fluid"></a><div class="container"><p>SLOVAKIA</p></div>
             </div>
           </div>
           <div class="col-md-3">
             <div class="polaroid">
-              <a href="slovenia.html" target="_blank"><img src="img/Gallery/Slovenia/01.jpeg" alt="Slovenia" width="170" height="130"></a><div class="container"><p>SLOVENIA</p></div>
+              <a href="slovenia.html" target="_blank"><img src="img/Gallery/Slovenia/01.jpeg" alt="Slovenia" class="img-fluid"></a><div class="container"><p>SLOVENIA</p></div>
             </div>
           </div>
           <div class="col-md-3">
             <div class="polaroid">
-              <a href="spain.html" target="_blank"><img src="img/Gallery/Spain/01.jpeg" alt="Spain" width="170" height="130"></a><div class="container"><p>SPAIN</p></div>
+              <a href="spain.html" target="_blank"><img src="img/Gallery/Spain/01.jpeg" alt="Spain" class="img-fluid"></a><div class="container"><p>SPAIN</p></div>
             </div>
           </div>
         </div>
@@ -1346,22 +1346,22 @@
   		  <div class="row">
           <div class="col-md-3">
             <div class="polaroid">
-              <a href="sweden.html" target="_blank"><img src="img/Gallery/Sweden/01.jpg" alt="Sweden" width="170" height="130"></a><div class="container"><p>SWEDEN</p></div>
+              <a href="sweden.html" target="_blank"><img src="img/Gallery/Sweden/01.jpg" alt="Sweden" class="img-fluid"></a><div class="container"><p>SWEDEN</p></div>
             </div>
           </div>
           <div class="col-md-3">
             <div class="polaroid">
-              <a href="switzerland.html" target="_blank"><img src="img/Gallery/Switzerland/01.jpeg" alt="Switzerland" width="170" height="130"></a><div class="container"><p>SWITZERLAND</p></div>
+              <a href="switzerland.html" target="_blank"><img src="img/Gallery/Switzerland/01.jpeg" alt="Switzerland" class="img-fluid""></a><div class="container"><p>SWITZERLAND</p></div>
             </div>
           </div>
           <div class="col-md-3">
             <div class="polaroid">
-              <a href="thailand.html" target="_blank"><img src="img/Gallery/Thailand/01.jpeg" alt="Thailand" width="169" height="130"></a><div class="container"><p>THAILAND</p></div>
+              <a href="thailand.html" target="_blank"><img src="img/Gallery/Thailand/01.jpeg" alt="Thailand" class="img-fluid"></a><div class="container"><p>THAILAND</p></div>
             </div>
           </div>
           <div class="col-md-3">
             <div class="polaroid">
-              <a href="turkey.html" target="_blank"><img src="img/Gallery/Turkey/01.jpeg" alt="Turkey" width="169" height="130"></a><div class="container"><p>TURKEY</p></div>
+              <a href="turkey.html" target="_blank"><img src="img/Gallery/Turkey/01.jpeg" alt="Turkey" class="img-fluid"></a><div class="container"><p>TURKEY</p></div>
             </div>
           </div>
         </div>
@@ -1370,17 +1370,17 @@
   		  <div class="row">
           <div class="col-md-3">
             <div class="polaroid">
-              <a href="united arab emirates.html" target="_blank"><img src="img/Gallery/United Arab Emirates/01.jpeg" alt="United Arab Emirates" width="170" height="130"></a><div class="container"><p>UAE</p></div>
+              <a href="united arab emirates.html" target="_blank"><img src="img/Gallery/United Arab Emirates/01.jpeg" alt="United Arab Emirates" class="img-fluid"></a><div class="container"><p>UAE</p></div>
             </div>
           </div>
           <div class="col-md-3">
             <div class="polaroid">
-              <a href="vatican.html" target="_blank"><img src="img/Gallery/Vatican/01.jpeg" alt="Vatican" width="170" height="130"></a><div class="container"><p>VATICAN</p></div>
+              <a href="vatican.html" target="_blank"><img src="img/Gallery/Vatican/01.jpeg" alt="Vatican" class="img-fluid"></a><div class="container"><p>VATICAN</p></div>
             </div>
           </div>
           <div class="col-md-3">
             <div class="polaroid">
-              <a href="vietnam.html" target="_blank"><img src="img/Gallery/Vietnam/01.jpeg" alt="Vietnam" width="170" height="130"></a><div class="container"><p>VIETNAM</p></div>
+              <a href="vietnam.html" target="_blank"><img src="img/Gallery/Vietnam/01.jpeg" alt="Vietnam" class="img-fluid"></a><div class="container"><p>VIETNAM</p></div>
             </div>
           </div>
         </div>
