Update publication list in index.html
Added new special issues and updated existing entries in the publication list.

--- a/index.html
+++ b/index.html
@@ -1064,8 +1064,9 @@
 		<li>Intelligent Automation & Soft Computing (Technical Science Press, IF: 3.5), <a href="https://www.techscience.com/iasc/special_detail/human-centric-computing">Special Issue</a> on “AI Powered Human-Centric Computing with Cloud/Fog/Edge”, 2023</li>
 		<li>Journal of Cloud Computing (Springer Nature, IF: 3.4), <a href="https://www.springeropen.com/collections/mec-ai">Special Issue</a> on “Mobile Edge Computing Meets AI”, 2023-2024</li>
 		<li>International Journal of Ad Hoc and Ubiquitous Computing (Inder Science, IF: 0.7), <a href="https://www.inderscience.com/info/ingeneral/cfp.php?id=5850">Special Issue</a> on “Federated Learning for Edge based IoT Anomaly Detection in Big Data Streams”, 2024</li>
-		<li>Current Medical Imaging (Bentham Science, IF: 1.1), <a href="https://www.eurekaselect.com/call-for-papers-detail/6506/specialissue">Special Issue</a> on “Deep Learning for Advanced Image Analysis in Health Informatics”, 2024</li>
-            </ol>
+		<li>Current Medical Imaging (Bentham Science, IF: 1.1), <a href="https://www.eurekaselect.com/call-for-papers-detail/6506/specialissue">Special Issue</a> on “Deep Learning for Advanced Image Analysis in Health Informatics”, 2024</li
+		<li>Recent Advances in Computer Science and Communications (Bentham Science, IF: 1.4), <a href="https://www.eurekaselect.com/call-for-papers-detail/6100/specialissue/mostRecent">Special Issue</a> on “Blockchain based Trust and Security Mechanisms for Big Data Sharing in Collaborative IoT Ecosystems”, 2025</li>
+			</ol>
 		
              <b>Awards and Honours</b> <br>
 		<i class="fa fa-tag"></i> PAF-IAST Post-doc Research Fellowship at SCCH, Austria (2021-2023) <br>
