Update image links and country names in index.html

--- a/index.html
+++ b/index.html
@@ -1189,18 +1189,24 @@
           </div>
           <div class="col-md-3">
             <div class="polaroid">
+              <a href="bahrain.html" target="_blank"><img src="img/Gallery/Bahrain/01.jpeg" alt="Bahrain" class="img-fluid"></a><div class="container"><p>BAHRAIN</p></div>
+            </div>
+          </div>
+			<div class="col-md-3">
+            <div class="polaroid">
               <a href="belgium.html" target="_blank"><img src="img/Gallery/Belgium/01.jpeg" alt="Belgium" class="img-fluid"></a><div class="container"><p>BELGIUM</p></div>
             </div>
           </div>
-          <div class="col-md-3">
-            <div class="polaroid">
-              <a href="cambodia.html" target="_blank"><img src="img/Gallery/Cambodia/01.jpeg" alt="Cambodia" class="img-fluid"></a><div class="container"><p>CAMBODIA</p></div>
-            </div>
-          </div>
+          
         </div>
 
 		  <!-- Row no 2 -->
         <div class="row">
+		<div class="col-md-3">
+            <div class="polaroid">
+              <a href="cambodia.html" target="_blank"><img src="img/Gallery/Cambodia/01.jpeg" alt="Cambodia" class="img-fluid"></a><div class="container"><p>CAMBODIA</p></div>
+            </div>
+          </div>
           <div class="col-md-3">
             <div class="polaroid">
               <a href="china.html" target="_blank"><img src="img/Gallery/China/01.jpeg" alt="China" class="img-fluid"></a><div class="container"><p>CHINA</p></div>
@@ -1216,15 +1222,16 @@
               <a href="czech.html" target="_blank"><img src="img/Gallery/Czech/01.jpeg" alt="Czech" class="img-fluid"></a><div class="container"><p>CZECH</p></div>
             </div>
           </div>
-          <div class="col-md-3">
-            <div class="polaroid">
-              <a href="england.html" target="_blank"><img src="img/Gallery/England/01.jpeg" alt="England" class="img-fluid"></a><div class="container"><p>ENGLAND</p></div>
-            </div>
-          </div>
+
 		    </div>
 
 		  <!-- Row no 3 -->
   		  <div class="row">
+		          <div class="col-md-3">
+            <div class="polaroid">
+              <a href="england.html" target="_blank"><img src="img/Gallery/England/01.jpeg" alt="England" class="img-fluid"></a><div class="container"><p>ENGLAND</p></div>
+            </div>
+          </div>
           <div class="col-md-3">
             <div class="polaroid">
               <a href="estonia.html" target="_blank"><img src="img/Gallery/Estonia/01.jpeg" alt="Estonia" class="img-fluid"></a><div class="container"><p>ESTONIA</p></div>
@@ -1240,15 +1247,16 @@
               <a href="france.html" target="_blank"><img src="img/Gallery/France/01.jpeg" alt="France" class="img-fluid"></a><div class="container"><p>FRANCE</p></div>
             </div>
           </div>
-          <div class="col-md-3">
-            <div class="polaroid">
-              <a href="germany.html" target="_blank"><img src="img/Gallery/Germany/01.jpeg" alt="Germany" class="img-fluid"></a><div class="container"><p>GERMANY</p></div>
-            </div>
-          </div>
+
   			</div>
 
 		  <!-- Row no 4 -->
 	      <div class="row">
+		          <div class="col-md-3">
+            <div class="polaroid">
+              <a href="germany.html" target="_blank"><img src="img/Gallery/Germany/01.jpeg" alt="Germany" class="img-fluid"></a><div class="container"><p>GERMANY</p></div>
+            </div>
+          </div>
           <div class="col-md-3">
             <div class="polaroid">
               <a href="hungary.html" target="_blank"><img src="img/Gallery/Hungary/01.jpeg" alt="Hungary" class="img-fluid"></a><div class="container"><p>HUNGARY</p></div>
@@ -1264,15 +1272,16 @@
               <a href="japan.html" target="_blank"><img src="img/Gallery/Japan/01.jpeg" alt="Japan" class="img-fluid"></a><div class="container"><p>JAPAN</p></div>
             </div>
           </div>
-          <div class="col-md-3">
-            <div class="polaroid">
-              <a href="kingdom of saudi arabia.html" target="_blank"><img src="img/Gallery/Kingdom of Saudi Arabia/01.jpeg" alt="Kingdom of Saudi Arabia" class="img-fluid""></a><div class="container"><p>Saudi Arabia</p></div>
-            </div>
-          </div>
+
 	      </div>
 
 		  <!-- Row no 5 -->
   		  <div class="row">
+		          <div class="col-md-3">
+            <div class="polaroid">
+              <a href="kingdom of saudi arabia.html" target="_blank"><img src="img/Gallery/Kingdom of Saudi Arabia/01.jpeg" alt="Kingdom of Saudi Arabia" class="img-fluid""></a><div class="container"><p>Saudi Arabia</p></div>
+            </div>
+          </div>
           <div class="col-md-3">
            <div class="polaroid">
              <a href="latvia.html" target="_blank"><img src="img/Gallery/Latvia/01.jpeg" alt="Latvia" class="img-fluid"></a><div class="container"><p>LATVIA</p></div>
@@ -1288,15 +1297,16 @@
               <a href="malaysia.html" target="_blank"><img src="img/Gallery/Malaysia/01.jpeg" alt="Malaysia" class="img-fluid"></a><div class="container"><p>MALAYSIA</p></div>
             </div>
           </div>
-          <div class="col-md-3">
-            <div class="polaroid">
-              <a href="malta.html" target="_blank"><img src="img/Gallery/Malta/01.jpeg" alt="Malta" class="img-fluid"></a><div class="container"><p>MALTA</p></div>
-            </div>
-          </div>
+
         </div>
 
 		  <!-- Row no 6 -->
     		<div class="row">
+		          <div class="col-md-3">
+            <div class="polaroid">
+              <a href="malta.html" target="_blank"><img src="img/Gallery/Malta/01.jpeg" alt="Malta" class="img-fluid"></a><div class="container"><p>MALTA</p></div>
+            </div>
+          </div>
           <div class="col-md-3">
             <div class="polaroid">
               <a href="netherlands.html" target="_blank"><img src="img/Gallery/Netherlands/01.jpeg" alt="Netherlands" class="img-fluid"></a><div class="container"><p>NETHERLANDS</p></div>
@@ -1312,15 +1322,16 @@
               <a href="poland.html" target="_blank"><img src="img/Gallery/Poland/01.jpeg" alt="Poland" class="img-fluid"></a><div class="container"><p>POLAND</p></div>
             </div>
           </div>
-          <div class="col-md-3">
-            <div class="polaroid">
-              <a href="portugal.html" target="_blank"><img src="img/Gallery/Portugal/01.jpeg" alt="Portugal" class="img-fluid"></a><div class="container"><p>PORTUGAL</p></div>
-            </div>
-          </div>
+
         </div>
 
 		  <!-- Row no 7 -->
   		  <div class="row">
+		          <div class="col-md-3">
+            <div class="polaroid">
+              <a href="portugal.html" target="_blank"><img src="img/Gallery/Portugal/01.jpeg" alt="Portugal" class="img-fluid"></a><div class="container"><p>PORTUGAL</p></div>
+            </div>
+          </div>
           <div class="col-md-3">
             <div class="polaroid">
               <a href="scotland.html" target="_blank"><img src="img/Gallery/Scotland/01.jpeg" alt="Scotland" class="img-fluid"></a><div class="container"><p>SCOTLAND</p></div>
@@ -1336,15 +1347,16 @@
               <a href="slovenia.html" target="_blank"><img src="img/Gallery/Slovenia/01.jpeg" alt="Slovenia" class="img-fluid"></a><div class="container"><p>SLOVENIA</p></div>
             </div>
           </div>
-          <div class="col-md-3">
-            <div class="polaroid">
-              <a href="spain.html" target="_blank"><img src="img/Gallery/Spain/01.jpeg" alt="Spain" class="img-fluid"></a><div class="container"><p>SPAIN</p></div>
-            </div>
-          </div>
+
         </div>
 
 		  <!-- Row no 8 -->
   		  <div class="row">
+		          <div class="col-md-3">
+            <div class="polaroid">
+              <a href="spain.html" target="_blank"><img src="img/Gallery/Spain/01.jpeg" alt="Spain" class="img-fluid"></a><div class="container"><p>SPAIN</p></div>
+            </div>
+          </div>
           <div class="col-md-3">
             <div class="polaroid">
               <a href="sweden.html" target="_blank"><img src="img/Gallery/Sweden/01.jpg" alt="Sweden" class="img-fluid"></a><div class="container"><p>SWEDEN</p></div>
@@ -1360,15 +1372,16 @@
               <a href="thailand.html" target="_blank"><img src="img/Gallery/Thailand/01.jpeg" alt="Thailand" class="img-fluid"></a><div class="container"><p>THAILAND</p></div>
             </div>
           </div>
-          <div class="col-md-3">
-            <div class="polaroid">
-              <a href="turkey.html" target="_blank"><img src="img/Gallery/Turkey/01.jpeg" alt="Turkey" class="img-fluid"></a><div class="container"><p>TURKEY</p></div>
-            </div>
-          </div>
+
         </div>
 
 		  <!-- Row no 9 -->
   		  <div class="row">
+		          <div class="col-md-3">
+            <div class="polaroid">
+              <a href="turkey.html" target="_blank"><img src="img/Gallery/Turkey/01.jpeg" alt="Turkey" class="img-fluid"></a><div class="container"><p>TURKEY</p></div>
+            </div>
+          </div>
           <div class="col-md-3">
             <div class="polaroid">
               <a href="united arab emirates.html" target="_blank"><img src="img/Gallery/United Arab Emirates/01.jpeg" alt="United Arab Emirates" class="img-fluid"></a><div class="container"><p>UAE</p></div>
