Change section title from 'VIE' to 'BAHRAIN'

--- a/bahrain.html
+++ b/bahrain.html
@@ -16,7 +16,7 @@
     </head>
     <body>
     	<section class="resume-section p-3 p-lg-5 d-flex justify-content-center" id="gallery">
-      	<div class="w-100"><h2 style="text-align:center;font-size:36px;">VIE<span style="color:#5dbcd2;">TNAM</h2>
+      	<div class="w-100"><h2 style="text-align:center;font-size:36px;">BAH<span style="color:#5dbcd2;">RAIN</h2>
           <div class="gallery">
             <a href="img/Gallery/Bahrain/01.jpeg" data-lightbox="mygallery" data-title="Maqbool Khan Bahrain 01"><img src="img/Gallery/Bahrain/01.jpeg" alt="Bahrain 01"></a>
             <a href="img/Gallery/Bahrain/02.jpeg" data-lightbox="mygallery" data-title="Maqbool Khan Bahrain 02"><img src="img/Gallery/Bahrain/02.jpeg" alt="Bahrain 02" height="150"></a>
