--- a/bahrain.html
+++ b/bahrain.html
@@ -19,10 +19,10 @@
       	<div class="w-100"><h2 style="text-align:center;font-size:36px;">BAH<span style="color:#5dbcd2;">RAIN</h2>
           <div class="gallery">
             <a href="img/Gallery/Bahrain/01.jpeg" data-lightbox="mygallery" data-title="Maqbool Khan Bahrain 01"><img src="img/Gallery/Bahrain/01.jpeg" alt="Bahrain 01"></a>
-            <a href="img/Gallery/Bahrain/02.jpeg" data-lightbox="mygallery" data-title="Maqbool Khan Bahrain 02"><img src="img/Gallery/Bahrain/02.jpeg" alt="Bahrain 02" height="150"></a>
+            <a href="img/Gallery/Bahrain/02.jpeg" data-lightbox="mygallery" data-title="Maqbool Khan Bahrain 02"><img src="img/Gallery/Bahrain/02.jpeg" alt="Bahrain 02"></a>
             <a href="img/Gallery/Bahrain/03.jpeg" data-lightbox="mygallery" data-title="Maqbool Khan Bahrain 03"><img src="img/Gallery/Bahrain/03.jpeg" alt="Bahrain 03"></a>
-            <a href="img/Gallery/Bahrain/04.jpeg" data-lightbox="mygallery" data-title="Maqbool Khan Bahrain 04"><img src="img/Gallery/Bahrain/04.jpeg" alt="Bahrain 04" height="150"></a>
-            <a href="img/Gallery/Bahrain/05.jpeg" data-lightbox="mygallery" data-title="Maqbool Khan Bahrain 05"><img src="img/Gallery/Bahrain/05.jpeg" alt="Bahrain 05" height="150"></a>
+            <a href="img/Gallery/Bahrain/04.jpeg" data-lightbox="mygallery" data-title="Maqbool Khan Bahrain 04"><img src="img/Gallery/Bahrain/04.jpeg" alt="Bahrain 04"></a>
+            <a href="img/Gallery/Bahrain/05.jpeg" data-lightbox="mygallery" data-title="Maqbool Khan Bahrain 05"><img src="img/Gallery/Bahrain/05.jpeg" alt="Bahrain 05"></a>
             <a href="img/Gallery/Bahrain/06.jpeg" data-lightbox="mygallery" data-title="Maqbool Khan Bahrain 06"><img src="img/Gallery/Bahrain/06.jpeg" alt="Bahrain 06"></a>
             <a href="img/Gallery/Bahrain/07.jpeg" data-lightbox="mygallery" data-title="Maqbool Khan Bahrain 07"><img src="img/Gallery/Bahrain/07.jpeg" alt="Bahrain 07"></a>
             <a href="img/Gallery/Bahrain/08.jpeg" data-lightbox="mygallery" data-title="Maqbool Khan Bahrain 08"><img src="img/Gallery/Bahrain/08.jpeg" alt="Bahrain 08"></a>
