--- a/bahrain.html
+++ b/bahrain.html
@@ -18,36 +18,36 @@
     	<section class="resume-section p-3 p-lg-5 d-flex justify-content-center" id="gallery">
       	<div class="w-100"><h2 style="text-align:center;font-size:36px;">BAH<span style="color:#5dbcd2;">RAIN</h2>
           <div class="gallery">
-            <a href="img/Gallery/Bahrain/01.jpeg" data-lightbox="mygallery" data-title="Maqbool Khan Bahrain 01"><img src="img/Gallery/Bahrain/01.jpeg" alt="Bahrain 01"></a>
+            <a href="img/Gallery/Bahrain/01.jpeg" data-lightbox="mygallery" data-title="Maqbool Khan Bahrain 01"><img src="img/Gallery/Bahrain/01.jpeg" alt="Bahrain 01" height="150"></a>
             <a href="img/Gallery/Bahrain/02.jpeg" data-lightbox="mygallery" data-title="Maqbool Khan Bahrain 02"><img src="img/Gallery/Bahrain/02.jpeg" alt="Bahrain 02"></a>
-            <a href="img/Gallery/Bahrain/03.jpeg" data-lightbox="mygallery" data-title="Maqbool Khan Bahrain 03"><img src="img/Gallery/Bahrain/03.jpeg" alt="Bahrain 03"></a>
-            <a href="img/Gallery/Bahrain/04.jpeg" data-lightbox="mygallery" data-title="Maqbool Khan Bahrain 04"><img src="img/Gallery/Bahrain/04.jpeg" alt="Bahrain 04"></a>
+            <a href="img/Gallery/Bahrain/03.jpeg" data-lightbox="mygallery" data-title="Maqbool Khan Bahrain 03"><img src="img/Gallery/Bahrain/03.jpeg" alt="Bahrain 03" height="150"></a>
+            <a href="img/Gallery/Bahrain/04.jpeg" data-lightbox="mygallery" data-title="Maqbool Khan Bahrain 04"><img src="img/Gallery/Bahrain/04.jpeg" alt="Bahrain 04" height="150"></a>
             <a href="img/Gallery/Bahrain/05.jpeg" data-lightbox="mygallery" data-title="Maqbool Khan Bahrain 05"><img src="img/Gallery/Bahrain/05.jpeg" alt="Bahrain 05"></a>
-            <a href="img/Gallery/Bahrain/06.jpeg" data-lightbox="mygallery" data-title="Maqbool Khan Bahrain 06"><img src="img/Gallery/Bahrain/06.jpeg" alt="Bahrain 06"></a>
+            <a href="img/Gallery/Bahrain/06.jpeg" data-lightbox="mygallery" data-title="Maqbool Khan Bahrain 06"><img src="img/Gallery/Bahrain/06.jpeg" alt="Bahrain 06" height="150"></a>
             <a href="img/Gallery/Bahrain/07.jpeg" data-lightbox="mygallery" data-title="Maqbool Khan Bahrain 07"><img src="img/Gallery/Bahrain/07.jpeg" alt="Bahrain 07"></a>
-            <a href="img/Gallery/Bahrain/08.jpeg" data-lightbox="mygallery" data-title="Maqbool Khan Bahrain 08"><img src="img/Gallery/Bahrain/08.jpeg" alt="Bahrain 08"></a>
+            <a href="img/Gallery/Bahrain/08.jpeg" data-lightbox="mygallery" data-title="Maqbool Khan Bahrain 08"><img src="img/Gallery/Bahrain/08.jpeg" alt="Bahrain 08" height="150"></a>
             <a href="img/Gallery/Bahrain/09.jpeg" data-lightbox="mygallery" data-title="Maqbool Khan Bahrain 09"><img src="img/Gallery/Bahrain/09.jpeg" alt="Bahrain 09"></a>
-            <a href="img/Gallery/Bahrain/10.jpeg" data-lightbox="mygallery" data-title="Maqbool Khan Bahrain 10"><img src="img/Gallery/Bahrain/10.jpeg" alt="Bahrain 10"></a>
+            <a href="img/Gallery/Bahrain/10.jpeg" data-lightbox="mygallery" data-title="Maqbool Khan Bahrain 10"><img src="img/Gallery/Bahrain/10.jpeg" alt="Bahrain 10" height="150"></a>
             <a href="img/Gallery/Bahrain/11.jpeg" data-lightbox="mygallery" data-title="Maqbool Khan Bahrain 11"><img src="img/Gallery/Bahrain/11.jpeg" alt="Bahrain 11"></a>
             <a href="img/Gallery/Bahrain/12.jpeg" data-lightbox="mygallery" data-title="Maqbool Khan Bahrain 12"><img src="img/Gallery/Bahrain/12.jpeg" alt="Bahrain 12"></a>
             <a href="img/Gallery/Bahrain/13.jpeg" data-lightbox="mygallery" data-title="Maqbool Khan Bahrain 13"><img src="img/Gallery/Bahrain/13.jpeg" alt="Bahrain 13"></a>
             <a href="img/Gallery/Bahrain/14.jpeg" data-lightbox="mygallery" data-title="Maqbool Khan Bahrain 14"><img src="img/Gallery/Bahrain/14.jpeg" alt="Bahrain 14"></a>
             <a href="img/Gallery/Bahrain/15.jpeg" data-lightbox="mygallery" data-title="Maqbool Khan Bahrain 15"><img src="img/Gallery/Bahrain/15.jpeg" alt="Bahrain 15"></a>
             <a href="img/Gallery/Bahrain/16.jpeg" data-lightbox="mygallery" data-title="Maqbool Khan Bahrain 16"><img src="img/Gallery/Bahrain/16.jpeg" alt="Bahrain 16"></a>
-            <a href="img/Gallery/Bahrain/17.jpeg" data-lightbox="mygallery" data-title="Maqbool Khan Bahrain 17"><img src="img/Gallery/Bahrain/17.jpeg" alt="Bahrain 17"></a>
+            <a href="img/Gallery/Bahrain/17.jpeg" data-lightbox="mygallery" data-title="Maqbool Khan Bahrain 17"><img src="img/Gallery/Bahrain/17.jpeg" alt="Bahrain 17" height="150"></a>
             <a href="img/Gallery/Bahrain/18.jpeg" data-lightbox="mygallery" data-title="Maqbool Khan Bahrain 18"><img src="img/Gallery/Bahrain/18.jpeg" alt="Bahrain 18"></a>
             <a href="img/Gallery/Bahrain/19.jpeg" data-lightbox="mygallery" data-title="Maqbool Khan Bahrain 19"><img src="img/Gallery/Bahrain/19.jpeg" alt="Bahrain 19"></a>
             <a href="img/Gallery/Bahrain/20.jpeg" data-lightbox="mygallery" data-title="Maqbool Khan Bahrain 20"><img src="img/Gallery/Bahrain/20.jpeg" alt="Bahrain 20"></a>
             <a href="img/Gallery/Bahrain/21.jpeg" data-lightbox="mygallery" data-title="Maqbool Khan Bahrain 21"><img src="img/Gallery/Bahrain/21.jpeg" alt="Bahrain 21"></a>
-            <a href="img/Gallery/Bahrain/22.jpeg" data-lightbox="mygallery" data-title="Maqbool Khan Bahrain 22"><img src="img/Gallery/Bahrain/22.jpeg" alt="Bahrain 22"></a>
+            <a href="img/Gallery/Bahrain/22.jpeg" data-lightbox="mygallery" data-title="Maqbool Khan Bahrain 22"><img src="img/Gallery/Bahrain/22.jpeg" alt="Bahrain 22" height="150"></a>
             <a href="img/Gallery/Bahrain/23.jpeg" data-lightbox="mygallery" data-title="Maqbool Khan Bahrain 23"><img src="img/Gallery/Bahrain/23.jpeg" alt="Bahrain 23"></a>
             <a href="img/Gallery/Bahrain/24.jpeg" data-lightbox="mygallery" data-title="Maqbool Khan Bahrain 24"><img src="img/Gallery/Bahrain/24.jpeg" alt="Bahrain 24"></a>
-            <a href="img/Gallery/Bahrain/25.jpeg" data-lightbox="mygallery" data-title="Maqbool Khan Bahrain 25"><img src="img/Gallery/Bahrain/25.jpeg" alt="Bahrain 25"></a>
+            <a href="img/Gallery/Bahrain/25.jpeg" data-lightbox="mygallery" data-title="Maqbool Khan Bahrain 25"><img src="img/Gallery/Bahrain/25.jpeg" alt="Bahrain 25" height="150"></a>
             <a href="img/Gallery/Bahrain/26.jpeg" data-lightbox="mygallery" data-title="Maqbool Khan Bahrain 26"><img src="img/Gallery/Bahrain/26.jpeg" alt="Bahrain 26"></a>
-            <a href="img/Gallery/Bahrain/27.jpeg" data-lightbox="mygallery" data-title="Maqbool Khan Bahrain 27"><img src="img/Gallery/Bahrain/27.jpeg" alt="Bahrain 27"></a>
-            <a href="img/Gallery/Bahrain/28.jpeg" data-lightbox="mygallery" data-title="Maqbool Khan Bahrain 28"><img src="img/Gallery/Bahrain/28.jpeg" alt="Bahrain 28"></a>
+            <a href="img/Gallery/Bahrain/27.jpeg" data-lightbox="mygallery" data-title="Maqbool Khan Bahrain 27"><img src="img/Gallery/Bahrain/27.jpeg" alt="Bahrain 27" height="150"></a>
+            <a href="img/Gallery/Bahrain/28.jpeg" data-lightbox="mygallery" data-title="Maqbool Khan Bahrain 28"><img src="img/Gallery/Bahrain/28.jpeg" alt="Bahrain 28" height="150"></a>
             <a href="img/Gallery/Bahrain/29.jpeg" data-lightbox="mygallery" data-title="Maqbool Khan Bahrain 29"><img src="img/Gallery/Bahrain/29.jpeg" alt="Bahrain 29"></a>
-            <a href="img/Gallery/Bahrain/30.jpeg" data-lightbox="mygallery" data-title="Maqbool Khan Bahrain 30"><img src="img/Gallery/Bahrain/30.jpeg" alt="Bahrain 30"></a>
+            <a href="img/Gallery/Bahrain/30.jpeg" data-lightbox="mygallery" data-title="Maqbool Khan Bahrain 30"><img src="img/Gallery/Bahrain/30.jpeg" alt="Bahrain 30" height="150"></a>
           </div>
         </div>
     	</section>
